--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
-    "ext-json": "*"
+    "ext-json": "*",
+    "ext-cassandra": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.3",
